// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render Mistakes Render Mistakes should match with snapshot with one count 1`] = `
<div
  className="game__mistakes"
>
  <div
    className="wrong"
  />
</div>
`;

exports[`Render Mistakes Render Mistakes should match with snapshot with zero count 1`] = `
<div
  className="game__mistakes"
/>
`;
